--- a/assets/custom/2.1.0/css/style.css
+++ b/assets/custom/2.1.0/css/style.css
@@ -3157,7 +3157,8 @@ footer.light {
     border-left: none !important; }
 
   .progressbar {
-    width: 100% !important; }
+    width: auto; /* 100% !important*/
+  }
 
   .circle {
     width: 90% !important; }
