--- a/assets/custom/2.1.0/scss/mediaquery.scss
+++ b/assets/custom/2.1.0/scss/mediaquery.scss
@@ -97,7 +97,7 @@
   }
 
   .progressbar {
-    width: 100% !important;
+    width: auto; //100% !important;
   }
   .circle {  width: 90% !important;  }
 
