--- a/mike.css
+++ b/mike.css
@@ -23,8 +23,12 @@
   background-position: center;
   background-size: cover; }
 
-.timeline-mike-04 {
-  background: url("image/timeline/04.jpg");
+.timeline-mike-04{
+  background: url("image/timeline/04.png");
   background-position: center;
   background-size: cover; }
 
+.timeline-mike-05 {
+  background: url("image/timeline/05.jpg");
+  background-position: center;
+  background-size: cover; }
